--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,14 @@ dependencies {
     implementation "androidx.multidex:multidex:2.0.1"
 
     implementation 'neshan-android-sdk:services-sdk:1.0.0@aar'
-    implementation 'neshan-android-sdk:mobile-sdk:1.0.1@aar'
+    implementation 'neshan-android-sdk:mobile-sdk:1.0.2@aar'
     implementation 'neshan-android-sdk:common-sdk:0.0.2@aar'
 
     //Play Services
-    implementation 'com.google.android.gms:play-services-gcm:16.1.0'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+//    implementation 'com.google.android.gms:play-services-gcm:16.1.0'
+//    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-gcm:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     // dexter runtime permissions
     implementation 'com.karumi:dexter:4.2.0'
@@ -56,7 +58,7 @@ dependencies {
 
     //Volley
     implementation 'com.android.volley:volley:1.1.1'
-    
+
     //OKHTTP
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 
